--- a/angular.json
+++ b/angular.json
@@ -20,9 +20,14 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+                  "src/favicon.ico",
+                  "src/assets",
+               {
+                 "glob": "google1bb8736ae5684540.html",
+                 "input": "src/assets",
+                "output": "/"
+            }
+  ],
             "styles": [
               "src/styles.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
