--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,12 @@
   "src/assets",
   {
     "glob": "robots.txt",
-    "input": "src",
+    "input": "src/assets",
     "output": "/"
   },
   {
     "glob": "sitemap.xml",
-    "input": "src",
+    "input": "src/assets",
     "output": "/"
   },
   {
